# shaky-steve

./: .gitignore  .gitmodules  assistant.py  chatgpt.py  color.py  config.py  dbus.py  index.html  install.sh  joystick.py  led.py  main.py  navigator.py  pyproject.toml  requirements-assistant.txt  requirements-jupyter.txt  requirements-min.txt  requirements.txt  roboarm.py  shell.py  spnav.py  stt.py  stt_final.py  tts.py  utils.py  wake.py
models/: hey_steve.onnx  hey_steve.tflite
notebooks/: api.ipynb  multitasking.ipynb
scripts/: install.sh  start-jupyter.sh  stt-activate  stt-deactivate  stt-monitor  tts2wav.py
steve/: __init__.py  animation.py  audio.py  chatgpt.py  color.py  config.py  ease.py  joystick.py  jupyter.py  led.py  main.py  main2.py  mouse.py  navigator.py  roboarm.py  shell.py  spnav.py  stt.py  tts.py  wake.py
systemd/: steve-assistant.service  steve-joystick.service  steve-led.service  steve-main.service  steve-mouse.service  steve-navigator.service  steve-roboarm.service  steve-spacenavd.service  steve-stt.service
